Authorization without token

--- a/YavaPrimumFront/src/app/pages/HR/hr-main-page/create-candidate/create-candidate.component.html
+++ b/YavaPrimumFront/src/app/pages/HR/hr-main-page/create-candidate/create-candidate.component.html
@@ -9,28 +9,28 @@
           <div class="modal-body">
             <div>
               <label for="secondName" class="col-form-label">Введите фамилию</label>
-              <input type="text" class="form-control" id="secondName" name="secondName" ngModel>
+              <input placeholder="Иванов" type="text" class="form-control" id="secondName" name="secondName" ngModel>
             </div>
               <div>
               <label for="firstName" class="col-form-label">Введите имя</label>
-              <input type="text" class="form-control" id="firstName" name="firstName" ngModel>
+              <input placeholder="Иван" type="text" class="form-control" id="firstName" name="firstName" ngModel>
               </div>
               <div>
                 <label for="surName" class="col-form-label">Введите отчество</label>
-                <input type="text" class="form-control" id="surName" name="surName" ngModel>
+                <input placeholder="Иванович" type="text" class="form-control" id="surName" name="surName" ngModel>
               </div>
               <div>
                 <label for="post" class="col-form-label">Введите должность</label>
-                <input type="text" class="form-control" id="post" name="post" ngModel>
+                <input placeholder="Водитель" type="text" class="form-control" id="post" name="post" ngModel>
               </div>
               <div>
                 <label for="country" class="col-form-label">Введите страну проживания</label>
-                <input type="text" class="form-control" id="country" name="country" ngModel>
+                <input placeholder="Беларусь" type="text" class="form-control" id="country" name="country" ngModel>
               </div>
           </div>
           <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" >Закрыть</button>
-          <button type="submit" class="btn btn-primary" >Добавить кандидата</button>
+          <button type="submit" class="btn btn-primary ">Добавить кандидата</button>
           </div>
       </form>
     </div>
