--- a/YavaPrimumFront/src/app/pages/autotization/autotization.component.html
+++ b/YavaPrimumFront/src/app/pages/autotization/autotization.component.html
@@ -1,16 +1,22 @@
-<div class="login">
-    <form>
+<div class="d-flex align-items-center justify-content-center vh-100">
+  <div class="login">
+    <form #form="ngForm" (ngSubmit)="onSubmitLogIns(form)">
       <div class="card card-body">
+          <h3 class="text-center">Добро пожаловать в YavaPrimum</h3>
           <div class="form-group">
-            <label for="login" class="col-form-label">Логин</label>
-            <input type="text" class="form-control" id="login" name="login" ngModel>
+            <label for="EMail" class="col-form-label">Логин</label>
+            <input placeholder="login@mail.ru" type="email" class="form-control" id="EMail" name="EMail" ngModel>
           </div>
-          <div class="form-group">
+          <div class="form-group mt-3">
             <label for="password" class="col-form-label">Пароль</label>
-            <input type="password" class="form-control" id="password" name="password" ngModel>
+            <input placeholder="Пароль" type="password" class="form-control" id="password" name="password" ngModel>
           </div>
-          <button type="submit" class="btn btn-primary mt-3">Добавить кандидата</button>
+          <p class="loginEror text-center" id="loginEror"></p>
+          <a href="#" class="text-center mt-1">Забыли пароль?</a>
+          <button type="submit" class="btn btn-primary mt-4">Войти</button>
         </div> 
     </form>
   </div>
-  
+
+<img class="logo" src="img/PrimumLogoPrimary.svg">
+</div>
