--- a/YavaPrimumFront/src/app/pages/autotization/autotization.component.scss
+++ b/YavaPrimumFront/src/app/pages/autotization/autotization.component.scss
@@ -1,7 +1,14 @@
 .login
 {
-    margin: 100px 0px 0px 100px;
-
     max-width: 400px;
     max-height: 850px;
+}
+.loginEror
+{
+    color: red;
+}
+
+.logo
+{
+    width: 50%;
 }
