--- a/YavaPrimumFront/src/app/pages/autotization/autotization.component.html
+++ b/YavaPrimumFront/src/app/pages/autotization/autotization.component.html
@@ -4,12 +4,15 @@
       <div class="card card-body">
           <h3 class="text-center">Добро пожаловать в YavaPrimum</h3>
           <div class="form-group">
+
             <label for="EMail" class="col-form-label">Логин</label>
-            <input placeholder="login@mail.ru" type="email" class="form-control" id="EMail" name="EMail" ngModel>
-          </div>
-          <div class="form-group mt-3">
+            <input placeholder="login@mail.ru" type="email" required class="form-control"  
+                    id="EMail" name="EMail" ngModel>
+
             <label for="password" class="col-form-label">Пароль</label>
-            <input placeholder="Пароль" type="password" class="form-control" id="password" name="password" ngModel>
+            <input placeholder="Пароль" type="password" required class="form-control" 
+                    id="password" name="password" ngModel>
+
           </div>
           <p class="loginEror text-center" id="loginEror"></p>
           <a href="#" class="text-center mt-1">Забыли пароль?</a>
