Tasks in ActiveDay

--- a/YavaPrimumFront/src/app/pages/HR/hr-main-page/calendar/calendar.component.html
+++ b/YavaPrimumFront/src/app/pages/HR/hr-main-page/calendar/calendar.component.html
@@ -15,7 +15,7 @@
   <div class="grid weeks-grid">
     @for (weekDay of weekDays(); track $index)
     {
-      <div class="grid-cell">
+      <div class="grid-cell text-capitalize">
         {{weekDay}}
       </div>
     }
@@ -24,24 +24,22 @@
   <div class="grid day-grid">
     @for (dayOfMonth of daysOfMonth(); track $index)
     {
-      <div [ngClass]="{'grid-cell' : true}">
+      <div [ngClass]="{'grid-cell px-1' : true}" (click)="setActiveDay(dayOfMonth)">
         <div class="date">{{dayOfMonth.day}}</div>
-        @if(dayOfMonth.day % 2 ==0)
-        {
-        <div class="task mx-1">Meet with Aboba</div>    
-        }
-        @if(dayOfMonth.day % 3 ==0)
-        {
-          <div class="task2 mx-1">Do somethink2</div>
-        }
-        @if(dayOfMonth.day % 5 ==0)
-        {
-          <div class="task3 mx-1">Call to Candidate</div>
-        }
-        @if(dayOfMonth.day % 10 ==0)
-        {
-          <div class="task mx-1">Meet with Alesha</div>
-        }
+        
+            @if(dayOfMonth.day % 2 ==0)
+            {
+            <div class="task px-1 ">9:15 Абоба</div>    
+            }
+            @if(dayOfMonth.day % 3 ==0)
+            {
+              <div class="task2 px-1">Крахравицкий</div>
+            }
+            @if(dayOfMonth.day % 5 ==0)
+            {
+              <div class="task2 px-1">Чебупольский</div>
+            }
+          <img  src ="https://cdn-icons-png.flaticon.com/128/2985/2985150.png"class="more">
       </div>
     }
   </div>
