--- a/YavaPrimumFront/src/app/components/task-card/task-card.component.html
+++ b/YavaPrimumFront/src/app/components/task-card/task-card.component.html
@@ -1,8 +1,11 @@
-<div class="card candidate-card bg-white mb-4">
+<div class="card task-card bg-white mb-4" *ngIf="task">
     <div>
-      <p class="text-end text-success">Приём</p>
-      <p class="candidate_FIO">{{candidate.secondName}} {{candidate.firstName}} {{candidate.surName}}</p>
-      <p>{{candidate.post}}</p>
+        <span class="d-flex justify-content-between">
+        <p class="fs-4">9:15</p>
+        <p class="text-success">Приём</p>
+        </span>
+      <p>Водитель</p>
+      <p class="candidate_FIO">{{task.secondName}}</p>
     </div>
   </div>
   
