--- a/YavaPrimumFront/src/app/pages/HR/hr-main-page/calendar/calendar.component.scss
+++ b/YavaPrimumFront/src/app/pages/HR/hr-main-page/calendar/calendar.component.scss
@@ -2,7 +2,13 @@
 {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
+    grid-auto-rows: 1fr;
     color: gray;
+
+    .grid-cell
+    {
+        border-bottom: 1px solid #d3d3d3;
+    }
 }
 .weeks-grid
 {
@@ -20,7 +26,7 @@
 
     .grid-cell
     {
-        border-top: 1px solid #d3d3d3;
+        position: relative;
 
     }
     :hover
@@ -32,20 +38,28 @@
 
     .task
     {
+        width: fit-content;
+        margin-top: 2px;
         border-radius: 5px;
         background-color: aquamarine;
         font-size: 10px;
     }
     .task2
     {
+        width: fit-content;
+        margin-top: 2px;
         border-radius: 5px;
         background-color: rgb(255, 208, 127);
         font-size: 10px;
     }
-    .task3
+
+    .more
     {
-        border-radius: 5px;
-        background-color: rgb(255, 127, 221);
-        font-size: 10px;
+        position: absolute; 
+        bottom: 1px;
+        right: 3px;
+
+        width: 10px;
+        height: 10px;
     }
 }
