Try to show Tasks

--- a/YavaPrimumFront/src/app/components/task-card/task-card.component.html
+++ b/YavaPrimumFront/src/app/components/task-card/task-card.component.html
@@ -5,7 +5,7 @@
         <p class="text-success">Приём</p>
         </span>
       <p>Водитель</p>
-      <p class="candidate_FIO">{{task.secondName}}</p>
+      <p class="candidate_FIO">{{task.candidate.secondName}}</p>
     </div>
   </div>
   
