--- a/YavaPrimumFront/src/app/pages/HR/hr-main-page/create-candidate/create-candidate.component.html
+++ b/YavaPrimumFront/src/app/pages/HR/hr-main-page/create-candidate/create-candidate.component.html
@@ -1,37 +1,137 @@
-<div class="modal fade" id="staticBackdrop" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div
+  class="modal fade"
+  id="staticBackdrop"
+  tabindex="-1"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
   <div class="modal-dialog">
     <div class="modal-content">
-      <form #form="ngForm" (ngSubmit)="onSubmit(form)">
-          <div class="modal-header">
+      <form [formGroup]="form" (ngSubmit)="onSubmit()">
+        <div class="modal-header">
           <h5 class="modal-title">Добавить кандидата</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="modal"
+            aria-label="Закрыть"
+          ></button>
+        </div>
+        <div class="modal-body">
+          <div>
+            <label for="SecondName" class="col-form-label"
+              >Введите фамилию</label
+            >
+            <input
+              placeholder="Иванов"
+              type="text"
+              class="form-control"
+              id="secondName"
+              name="secondName"
+              formControlName="SecondName"
+            />
           </div>
-          <div class="modal-body">
-            <div>
-              <label for="secondName" class="col-form-label">Введите фамилию</label>
-              <input placeholder="Иванов" type="text" class="form-control" id="secondName" name="secondName" ngModel>
-            </div>
-              <div>
-              <label for="firstName" class="col-form-label">Введите имя</label>
-              <input placeholder="Иван" type="text" class="form-control" id="firstName" name="firstName" ngModel>
-              </div>
-              <div>
-                <label for="surName" class="col-form-label">Введите отчество</label>
-                <input placeholder="Иванович" type="text" class="form-control" id="surName" name="surName" ngModel>
-              </div>
-              <div>
-                <label for="post" class="col-form-label">Введите должность</label>
-                <input placeholder="Водитель" type="text" class="form-control" id="post" name="post" ngModel>
-              </div>
-              <div>
-                <label for="country" class="col-form-label">Введите страну проживания</label>
-                <input placeholder="Беларусь" type="text" class="form-control" id="country" name="country" ngModel>
-              </div>
+          <div>
+            <label for="FirstName" class="col-form-label">Введите имя</label>
+            <input
+              placeholder="Иван"
+              type="text"
+              class="form-control"
+              id="FirstName"
+              name="FirstName"
+              formControlName="FirstName"
+            />
           </div>
-          <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" >Закрыть</button>
-          <button type="submit" class="btn btn-primary ">Добавить кандидата</button>
+          <div>
+            <label for="SurName" class="col-form-label">Введите отчество</label>
+            <input
+              placeholder="Иванович"
+              type="text"
+              class="form-control"
+              id="SurName"
+              name="SurName"
+              formControlName="SurName"
+            />
           </div>
+          <div>
+            <label for="Post" class="col-form-label">Введите должность</label>
+            <input
+              placeholder="Водитель"
+              type="text"
+              class="form-control"
+              id="Post"
+              name="Post"
+              formControlName="Post"
+            />
+          </div>
+          <div>
+            <label for="Country" class="col-form-label"
+              >Введите страну проживания</label
+            >
+            <input
+              placeholder="Беларусь"
+              type="text"
+              class="form-control"
+              id="Country"
+              name="Country"
+              formControlName="Country"
+            />
+          </div>
+          <div>
+            <label for="Telephone">Телефон</label>
+            <input
+              placeholder="+375445559525"
+              type="text"
+              class="form-control"
+              id="telephone"
+              name="telephone"
+              formControlName="Telephone"
+            />
+          </div>
+          <div>
+            <label for="Email">Email</label>
+            <input
+              placeholder="email@mail.ru"
+              type="email"
+              class="form-control"
+              id="email"
+              name="Email"
+              formControlName="Email"
+            />
+          </div>
+          <!-- <div>
+            <input
+              type="checkbox"
+              class="form-check-input"
+              id="interviewPassed"
+            />
+            <label class="form-check-label" for="interviewPassed"
+              >Прошел собеседование</label
+            >
+          </div> -->
+          <div>
+            <label for="dateTime">Дата и время собеседования</label>
+            <input
+              type="datetime-local"
+              class="form-control"
+              id="dateTime"
+              name="dateTime"
+              formControlName="InterviewDate"
+            />
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button
+            type="button"
+            class="btn btn-secondary"
+            data-bs-dismiss="modal"
+          >
+            Закрыть
+          </button>
+          <button type="submit" class="btn btn-primary">
+            Добавить кандидата
+          </button>
+        </div>
       </form>
     </div>
   </div>
