--- a/YavaPrimumFront/src/app/pages/HR/hr-main-page/hr-main-page.component.html
+++ b/YavaPrimumFront/src/app/pages/HR/hr-main-page/hr-main-page.component.html
@@ -1,7 +1,8 @@
+<app-header></app-header>
 <div class="menu d-flex">
   <div class="d-flex flex-column">
     <div>
-      <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+      <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#AddCandidate">
         Добавьте кандидата
       </button>
       <button class="btn btn-primary dropdown-toggle mb-3 w-25 mx-1" type="button" id="dropdownMenuButton" (click)="toggleDropdown()">
@@ -15,7 +16,13 @@
       </div>
     </div>
     <div class="taks-list">   
-      <app-task-card *ngFor="let task of tasks" [task]="task"></app-task-card>
+      <ng-container *ngIf="tasks.length > 0; else noTasks">
+        <app-task-card *ngFor="let task of tasks" [task]="task"></app-task-card>
+      </ng-container>
+      
+      <ng-template #noTasks>
+        <div class="noTask">На сегодня задач нет...</div>
+      </ng-template>
     </div>
   </div>
   <div class="calendar">
