--- a/YavaPrimumFront/src/app/pages/HR/hr-main-page/hr-main-page.component.scss
+++ b/YavaPrimumFront/src/app/pages/HR/hr-main-page/hr-main-page.component.scss
@@ -27,6 +27,13 @@
 
     -ms-overflow-style: none;  /* Скрываем скроллбар для Internet Explorer и Edge */
     scrollbar-width: none;     /* Скрываем скроллбар для Firefox */
+
+    .noTask
+    {
+      font-size: 20px;
+      text-align: center;
+      color: gray;
+    }
   }
 
   .calendar {
