--- a/YavaPrimumFront/src/app/pages/HR/hr-main-page/create-candidate/create-candidate.component.html
+++ b/YavaPrimumFront/src/app/pages/HR/hr-main-page/create-candidate/create-candidate.component.html
@@ -1,6 +1,7 @@
 <div
   class="modal fade"
-  id="staticBackdrop"
+  data-bs-backdrop="static"
+  id="AddCandidate"
   tabindex="-1"
   aria-labelledby="exampleModalLabel"
   aria-hidden="true"
