--- a/YavaPrimumFront/src/styles.scss
+++ b/YavaPrimumFront/src/styles.scss
@@ -1,3 +1,4 @@
+@import "../node_modules/bootstrap-icons/font/bootstrap-icons.css";
 body 
 {
     background-color: #F4F8FB !important;
@@ -7,3 +8,5 @@ p
 {
     margin: 0 !important;
 }
+
+
