--- a/YavaPrimumFront/src/app/components/header/header.component.html
+++ b/YavaPrimumFront/src/app/components/header/header.component.html
@@ -1,7 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-white p-2">
-    <button class="btn btn-success">Нажмите</button>
-    <p>Вы на аккаунте</p>
-    <button class="btn btn-success">Уведомления</button>
+<nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <h3>YavaPrimum</h3>
+    <span class="d-inline-flex">
+        <img id="photo" class="photo" src="icons/icon-512x512.png">
+        <p>{{user.secondName}} {{user.firstName}}</p>
+    </span>
 </nav>
 <div class="page">
     <router-outlet></router-outlet>
