--- a/YavaPrimumFront/src/app/components/header/header.component.scss
+++ b/YavaPrimumFront/src/app/components/header/header.component.scss
@@ -4,9 +4,18 @@
     margin-bottom: 10px;
     box-sizing: border-box;
 
+    padding: 2px 50px 2px 15px;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    .photo
+    {
+        border-radius: 100%;
+        width: 24px;
+        height: 24px;
+    }
 }
 
 .page
