--- a/YavaPrimumFront/src/app/components/task-card/task-info/task-info.component.html
+++ b/YavaPrimumFront/src/app/components/task-card/task-info/task-info.component.html
@@ -3,14 +3,30 @@ tabindex="-1" aria-labelledby="TaskInfo" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Вы берете этого человека на работу?</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                <h5 class="modal-title">Вы берете кандидата {{task.candidate.secondName}} на работу?</h5>
+                <button type="button" class="btn-close" (click)="CloseNextInterview()" data-bs-dismiss="modal" aria-label="Закрыть"></button>
             </div>
-            <div class="modal-body d-flex justify-content-end gap-1">
-                <button type="button" class="btn btn-success">Да</button>
-                <button type="button" class="btn btn-danger">Нет</button>
-                <button type="button" class="btn btn-secondary">Повторное собеседование</button>
+            <div class="modal-body">
+                <div *ngIf="!showElement" class="d-flex justify-content-end gap-1">
+                    <button type="submit" class="btn btn-success" data-bs-dismiss="modal" (click)="PassedInterview()">Да</button>
+                    <button type="submit" class="btn btn-danger" data-bs-dismiss="modal" (click)="FaildInterview()">Нет</button>
+                    <button type="button" class="btn btn-secondary" (click)="OpenNextInterview()">Повторное собеседование</button>
+                </div>
+                <div *ngIf="showElement">
+                    <label for="dateTime">Выберите новую дату и время для собеседования</label>
+                    <input
+                    type="datetime-local"
+                    class="form-control"
+                    id="dateTime"
+                    name="dateTime"
+                    formControlName="InterviewDate"
+                    />
+                </div>
             </div>
+            <div class="modal-footer" *ngIf="showElement">
+                <button type="submit" class="btn btn-success mt-1" data-bs-dismiss="modal" 
+                (click)="NextInterview()">Повторное собеседование</button>
+              </div>
         </div>
     </div>
 </div>
