--- a/YavaPrimumFront/src/app/pages/HR/hr-main-page/change-candidate/change-candidate.component.html
+++ b/YavaPrimumFront/src/app/pages/HR/hr-main-page/change-candidate/change-candidate.component.html
@@ -1,5 +1,5 @@
 <div class="modal fade" data-bs-backdrop="static" id="ChangeCandidate" tabindex="-1" 
-aria-labelledby="exampleModalLabel" aria-hidden="true" (show.bs.modal)="load()" >
+aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <form [formGroup]="form" (ngSubmit)="onSubmit()">
