--- a/YavaPrimumFront/src/app/components/task-card/task-info/task-info.component.html
+++ b/YavaPrimumFront/src/app/components/task-card/task-info/task-info.component.html
@@ -1,5 +1,5 @@
 <div class="modal fade" id="Interview" data-bs-backdrop="static"
-tabindex="-1" aria-labelledby="TaskInfo" aria-hidden="true">
+tabindex="-1" aria-labelledby="TaskInfo" aria-hidden="true" *ngIf="task">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
