--- a/YavaPrimumFront/src/app/pages/HR/hr-main-page/hr-main-page.component.html
+++ b/YavaPrimumFront/src/app/pages/HR/hr-main-page/hr-main-page.component.html
@@ -16,7 +16,7 @@
     </div>
     <div class="taks-list">   
       <ng-container *ngIf="tasks.length > 0; else noTasks">
-        <app-task-card *ngFor="let task of tasks" [task]="task" (taskClicked)="PassedInterview($event)"></app-task-card>
+        <app-task-card *ngFor="let task of tasks" [task]="task"></app-task-card>
       </ng-container>
       
       <ng-template #noTasks>
@@ -29,6 +29,6 @@
   </div>
 </div>
 <app-create-candidate></app-create-candidate>
-<app-task-info [task]="selectedTask" ></app-task-info>
-<app-change-candidate [task]="selectedTask"></app-change-candidate>
-<app-task-delete [task]="selectedTask"></app-task-delete>
+<app-task-info></app-task-info>
+<app-change-candidate></app-change-candidate>
+<app-task-delete></app-task-delete>
