--- a/YavaPrimumFront/src/app/pages/autotization/autotization.component.html
+++ b/YavaPrimumFront/src/app/pages/autotization/autotization.component.html
@@ -2,23 +2,44 @@
   <div class="login">
     <form #form="ngForm" (ngSubmit)="onSubmitLogIns(form)">
       <div class="card card-body">
-          <h3 class="text-center">Добро пожаловать в YavaPrimum</h3>
-          <div class="form-group">
-
-            <label for="EMail" class="col-form-label">Логин</label>
-            <input placeholder="login@mail.ru" type="email" required class="form-control"  
-                    id="EMail" name="EMail" ngModel>
-
-            <label for="password" class="col-form-label">Пароль</label>
-            <input placeholder="Пароль" type="password" required class="form-control" 
-                    id="password" name="password" ngModel>
-
+        <h3 class="text-center">Добро пожаловать в YavaPrimum</h3>
+        <div class="form-group">
+          <label for="EMail" class="col-form-label">Логин</label>
+          <input
+            placeholder="login@mail.ru"
+            type="email"
+            required
+            class="form-control"
+            id="EMail"
+            name="EMail"
+            ngModel
+            #email="ngModel"
+          />
+          <div *ngIf="email.invalid && email.touched" class="text-danger">
+            <small *ngIf="email.errors?.['required']">Логин обязателен для заполнения</small>
+            <small *ngIf="email.errors?.['email']">Некорректный формат email</small>
           </div>
-          <p class="loginEror text-center" id="loginEror"></p>
-          <a href="#" class="text-center mt-1">Забыли пароль?</a>
-          <button type="submit" class="btn btn-primary mt-4">Войти</button>
-        </div> 
+
+          <label for="password" class="col-form-label">Пароль</label>
+          <input
+            placeholder="Пароль"
+            type="password"
+            required
+            class="form-control"
+            id="password"
+            name="password"
+            ngModel
+            #password="ngModel"
+          />
+          <div *ngIf="password.invalid && password.touched" class="text-danger">
+            <small *ngIf="password.errors?.['required']">Пароль обязателен для заполнения</small>
+          </div>
+        </div>
+        <p class="loginEror text-center" id="loginEror"></p>
+        <a href="#" class="text-center mt-1">Забыли пароль?</a>
+        <button type="submit" class="btn btn-primary mt-4" [disabled]="form.invalid">Войти</button>
+      </div>
     </form>
   </div>
-<img class="logo" src="img/PrimumLogoPrimary.svg">
+  <img class="logo" src="img/PrimumLogoPrimary.svg">
 </div>
