--- a/YavaPrimumFront/src/app/components/task-card/task-card.component.scss
+++ b/YavaPrimumFront/src/app/components/task-card/task-card.component.scss
@@ -25,3 +25,8 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   }
   
+  .passed 
+  {
+    background-color: #f3f3f3 !important;
+    color: gray;
+  }
