--- a/YavaPrimumFront/src/app/pages/HR/hr-main-page/calendar/calendar.component.scss
+++ b/YavaPrimumFront/src/app/pages/HR/hr-main-page/calendar/calendar.component.scss
@@ -71,6 +71,10 @@ $task-call-bg: #6bf6ca;
         background-color: $task-interview-bg;
         font-size: 10px;
     }
+    .task-compleate
+    {
+        background-color: darken($task-interview-bg, 30%);
+    }
     .task-call
     {
         width: fit-content;
