--- a/YavaPrimumFront/src/app/pages/autotization/autotization.component.html
+++ b/YavaPrimumFront/src/app/pages/autotization/autotization.component.html
@@ -41,5 +41,5 @@
       </div>
     </form>
   </div>
-  <img class="logo" src="img/PrimumLogoPrimary.svg">
+  <img class="logo" src="img/PrimumLogo.svg">
 </div>
