--- a/YavaPrimumFront/src/app/components/task-card/task-card.component.html
+++ b/YavaPrimumFront/src/app/components/task-card/task-card.component.html
@@ -1,4 +1,4 @@
-<div class="card task-card bg-white mb-4" *ngIf="task">
+<div class="card task-card bg-white mb-4" *ngIf="task" [ngClass]="{'passed': task.status == true}">
   <div>
     <span class="d-flex justify-content-between">
       <p class="fs-4">{{task.dateTime.toFormat('HH:mm')}}</p>
@@ -18,7 +18,7 @@
   </span>
     <span class="d-flex justify-content-end gap-1 mt-2">
       <button type="button" class="bi bi-clipboard2 btn btn-success"  data-bs-toggle="modal" 
-      data-bs-target="#Interview" (click)="onButtonClick()">Собеседовать</button>
+      data-bs-target="#Interview" (click)="onButtonClick()" *ngIf="task.status == false">Собеседовать</button>
 
       <button type="button" class="bi bi-pen btn btn-secondary"data-bs-toggle="modal" 
       data-bs-target="#ChangeCandidate" (click)="onButtonClick()">Изменить</button>
