userPage with chart

--- a/YavaPrimumFront/src/app/components/header/header.component.scss
+++ b/YavaPrimumFront/src/app/components/header/header.component.scss
@@ -16,6 +16,17 @@
         width: 24px;
         height: 24px;
     }
+
+    .toUserData
+    {
+        cursor: pointer;
+        font-size: large;
+    }
+    .toUserData:hover
+    {
+        cursor: pointer;
+        font-size: large;
+    }
 }
 
 .page
