--- a/YavaPrimumFront/src/app/components/header/header.component.html
+++ b/YavaPrimumFront/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white">
     <h3>YavaPrimum</h3>
-    <span class="d-inline-flex">
+    <span routerLink="userData" class="d-inline-flex toUserData">
         <img id="photo" class="photo" src="icons/icon-512x512.png">
         <p>{{user.secondName}} {{user.firstName}}</p>
     </span>
