--- a/YavaPrimumFront/src/app/pages/HR/hr-main-page/calendar/calendar.component.html
+++ b/YavaPrimumFront/src/app/pages/HR/hr-main-page/calendar/calendar.component.html
@@ -26,15 +26,16 @@
     'grid-cell-not-month' : firstDayOfActiveMonth.month != dayOfMonth.month}" 
     (click)="setActiveDay(dayOfMonth)">
       <div class="date">{{ dayOfMonth.day }}</div>
+    
+
+      <ng-container *ngFor="let task of getTasksForDay(dayOfMonth) | slice:0:4">
+        <div class="task-interview px-1" [ngClass]="{'task-compleate': task.status == true}">
+          {{task.dateTime.toFormat("HH:mm")}} {{task.candidate.secondName}}
+        </div>
+      </ng-container>
       
-      <div *ngFor="let task of getTasksForDay(dayOfMonth)" class="task-interview px-1"
-      [ngClass]="{'task-compleate': task.status == true}">
-        {{task.dateTime.toFormat("HH:mm")}} {{task.candidate.secondName}}</div>
-      <!--<div *ngFor="let task of dayTasks" class="task px-1">Хабиб</div>
-      <div *ngIf="dayOfMonth.day % 3 === 0" class="task-call px-1">Крахравицкий</div>
-      <div *ngIf="dayOfMonth.day % 5 === 0" class="task2 px-1">Чебупольский</div>
       
-      <img src="https://cdn-icons-png.flaticon.com/128/2985/2985150.png" class="more">-->
+      <img  *ngIf="dayTaskLength > 4" src="https://cdn-icons-png.flaticon.com/128/2985/2985150.png" class="more">
     </div>
   </div>
 </div>
